--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
 		"gulp-sass": "^3.1.0",
 		"gulp-sourcemaps": "^2.6.1",
 		"gulp-webserver": "^0.9.1",
-		"purecss": "^1.0.0",
 		"vinyl-named": "^1.1.0",
 		"webpack-stream": "^4.0.0"
 	},
@@ -46,5 +45,6 @@
 	"bugs": {
 		"url": "https://github.com/matheusggds/pullrequests-git-extension/issues"
 	},
-	"homepage": "https://github.com/matheusggds/pullrequests-git-extension#readme"
+	"homepage": "https://github.com/matheusggds/pullrequests-git-extension#readme",
+	"devDependencies": {}
 }
