--- a/package.json
+++ b/package.json
@@ -19,6 +19,15 @@
 		"labels"
 	],
 	"dependencies": {
+		"bulma-scss": "^0.6.0"
+	},
+	"author": "Matheus Gomide",
+	"license": "GPL-3.0",
+	"bugs": {
+		"url": "https://github.com/matheusggds/pullrequests-git-extension/issues"
+	},
+	"homepage": "https://github.com/matheusggds/pullrequests-git-extension#readme",
+	"devDependencies": {
 		"autoprefixer": "^7.2.2",
 		"babel-core": "^6.26.0",
 		"babel-loader": "^7.1.2",
@@ -39,12 +48,5 @@
 		"gulp-webserver": "^0.9.1",
 		"vinyl-named": "^1.1.0",
 		"webpack-stream": "^4.0.0"
-	},
-	"author": "Matheus Gomide",
-	"license": "GPL-3.0",
-	"bugs": {
-		"url": "https://github.com/matheusggds/pullrequests-git-extension/issues"
-	},
-	"homepage": "https://github.com/matheusggds/pullrequests-git-extension#readme",
-	"devDependencies": {}
+	}
 }
