--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
 		"gulp-webserver": "^0.9.1",
 		"vinyl-named": "^1.1.0",
 		"webpack-stream": "^4.0.0"
+	},
+	"dependencies": {
+		"bootstrap": "^4.2.1"
 	}
 }
