--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
 		"webpack-stream": "^4.0.0"
 	},
 	"dependencies": {
-		"bootstrap": "^4.2.1"
+		"bootstrap": "^4.2.1",
+		"react": "^16.7.0",
+		"react-dom": "^16.7.0"
 	}
 }
