--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"babel-core": "^6.26.0",
 		"babel-loader": "^7.1.2",
 		"babel-preset-env": "^1.6.1",
+		"babel-preset-react": "^6.24.1",
 		"browser-sync": "^2.23.5",
 		"css-mqpacker": "^6.0.1",
 		"cssnano": "^3.10.0",
