--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
 	"homepage": "https://github.com/matheusggds/pullrequests-git-extension#readme",
 	"devDependencies": {
 		"autoprefixer": "^7.2.2",
-		"babel-core": "^6.26.0",
-		"babel-loader": "^7.1.2",
+		"babel-core": "^6.26.3",
+		"babel-loader": "^7.1.5",
 		"babel-preset-env": "^1.6.1",
+		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"browser-sync": "^2.23.5",
 		"css-mqpacker": "^6.0.1",
