--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"bootstrap": "^4.2.1",
 		"github-api": "^3.0.0",
 		"react": "^16.7.0",
-		"react-dom": "^16.7.0"
+		"react-dom": "^16.7.0",
+		"react-icons": "^3.3.0"
 	}
 }
