--- a/package.json
+++ b/package.json
@@ -22,28 +22,30 @@
 	},
 	"homepage": "https://github.com/matheusggds/pullrequests-git-extension#readme",
 	"devDependencies": {
-		"autoprefixer": "^7.2.2",
+		"@babel/core": "^7.2.2",
+		"@babel/plugin-proposal-class-properties": "^7.2.3",
+		"@babel/preset-env": "^7.2.3",
+		"@babel/preset-es2015": "^7.0.0-beta.53",
+		"@babel/preset-react": "^7.0.0",
+		"autoprefixer": "^9.4.5",
 		"babel-core": "^6.26.3",
-		"babel-loader": "^7.1.5",
-		"babel-preset-env": "^1.6.1",
-		"babel-preset-es2015": "^6.24.1",
-		"babel-preset-react": "^6.24.1",
+		"babel-loader": "^8.0.5",
 		"browser-sync": "^2.23.5",
-		"css-mqpacker": "^6.0.1",
-		"cssnano": "^3.10.0",
+		"css-mqpacker": "^7.0.0",
+		"cssnano": "^4.1.8",
 		"global": "^4.3.2",
 		"gulp": "^3.9.1",
 		"gulp-banner": "^0.1.3",
 		"gulp-connect-php": "^1.0.1",
 		"gulp-load-plugins": "^1.5.0",
 		"gulp-plumber": "^1.1.0",
-		"gulp-postcss": "^7.0.0",
+		"gulp-postcss": "^8.0.0",
 		"gulp-rename": "^1.2.2",
-		"gulp-sass": "^3.1.0",
+		"gulp-sass": "^4.0.2",
 		"gulp-sourcemaps": "^2.6.1",
 		"gulp-webserver": "^0.9.1",
 		"vinyl-named": "^1.1.0",
-		"webpack-stream": "^4.0.0"
+		"webpack-stream": "^5.2.1"
 	},
 	"dependencies": {
 		"axios": "^0.18.0",
